salesforce-core/force-app/main/default/objects/Org_Component__c/Org_Component__c.object-meta.xml
<CustomObject>
    <label>Org Component</label>
    <nameField>
        <label>Org Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>