salesforce-core/force-app/main/default/objects/Org_Component__c/fields/Component_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Component_Last_Modified__c</fullName>
    <label>Component Last Modified</label>
    <type>DateTime</type>
</CustomField>