salesforce-core/force-app/main/default/objects/Org_Component__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ApexClass</fullName>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>