salesforce-core/force-app/main/default/objects/Org_Component__c/fields/Lines_of_Code__c.field-meta.xml
<CustomField>
    <fullName>Lines_of_Code__c</fullName>
    <label>Lines of Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>